# fineco_client

./: README.md  pyproject.toml
examples/: send_transfer.py
fineco_client/: __init__.py  client.py  constants.py  countries.json  helpers.py  objects.py
