[tool.poetry]
name = "fineco-client"
version = "0.1.0"
description = "A Python client for Fineco bank."
authors = ["Francesco Truzzi <francesco@truzzi.me>"]
license = "AGPL-3.0-or-later"

[tool.poetry.dependencies]
python = "^3.8"
requests = "^2.26.0"
bs4 = "^0.0.1"

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"
black = "^21.9b0"
mypy = "^0.910"
types-requests = "^2.25.9"
types-beautifulsoup4 = "^4.10.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
